added base model. TODO: add lstm drawer

--- a/cfgs/sample_config.yml
+++ b/cfgs/sample_config.yml
@@ -1,3 +1,8 @@
 BATCH_SIZE: 32
+LR: 0.0003
+BINARY_DROPOUT: 0.2
+HIDDEN_DROPOUT: 0.4
+GRAD_CLIP: 0.0
 OPT: AdamW
+MAX_EPOCH: 10
 OPT_PARAMS: {betas: '(0.9, 0.98)', eps: '1e-9'}
